--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
     }
    },
    "source": [
-    "from CT_env import PetriNet\n",
+    "from solutions.PPO.enviroment import PetriNet\n",
     "from torchrl.envs.transforms import ActionMask,StepCounter,DTypeCastTransform,Compose,TransformedEnv\n",
     "import torch\n",
     "\n",
