--- a/run.ipynb
+++ b/run.ipynb
@@ -6,24 +6,76 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-22T12:50:22.917329Z",
-     "start_time": "2025-10-22T12:50:22.686020Z"
+     "end_time": "2025-10-22T15:08:39.659336Z",
+     "start_time": "2025-10-22T15:08:39.650572Z"
     }
    },
    "source": [
-    "from net import Petri\n",
+    "from solutions.pdr.net import Petri\n",
+    "import numpy as np\n",
     "\n",
     "env = Petri(csv_path='N1p21t16.CSV', n_t=16)\n",
     "\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-22T13:07:57.068429Z",
-     "start_time": "2025-10-22T13:07:57.064771Z"
+     "end_time": "2025-10-22T15:08:39.832140Z",
+     "start_time": "2025-10-22T15:08:39.673144Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "s = [[0, 1, 2, 3, 4, 5],\n",
+    "              [0, 1, 2, 15],\n",
+    "              np.arange(6, 14),\n",
+    "              [14, 9, 10, 11, 12, 13]]\n",
+    "\n",
+    "actions = [0, 0, 0, 0, 2, 2, 0, 0, 2, 0, 1, 2, 2, 0, 0, 2, 0, 2, 0, 2, 0, 2, 2, 2,\n",
+    "        2, 3]\n",
+    "all = []\n",
+    "for action in actions:\n",
+    "    all = np.concat((all, s[action]))"
+   ],
+   "id": "4c0dedc3b6709ee5",
+   "outputs": [],
+   "execution_count": 68
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T15:08:39.845589Z",
+     "start_time": "2025-10-22T15:08:39.840192Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "all = np.array(all,dtype=int)\n",
+    "all[0:10]"
+   ],
+   "id": "d5bb83043e46d583",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T15:08:39.861482Z",
+     "start_time": "2025-10-22T15:08:39.855705Z"
     }
    },
    "cell_type": "code",
@@ -40,75 +92,26 @@
        "        1,  1,  2,  2])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 45
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-22T13:01:01.406243Z",
-     "start_time": "2025-10-22T13:01:01.402288Z"
+     "end_time": "2025-10-22T15:08:39.887920Z",
+     "start_time": "2025-10-22T15:08:39.873751Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "s1 = [0,1,2,3,4,5]\n",
-    "s2 = [0,1,2,15]\n",
-    "#撤离\n",
-    "s3 = np.arange(6,14)\n",
-    "s4 = [14,9,10,11,12,13]"
-   ],
-   "id": "b93cd6e31bb349ea",
-   "outputs": [],
-   "execution_count": 19
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-22T13:01:10.195197Z",
-     "start_time": "2025-10-22T13:01:10.191446Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "s3",
-   "id": "bdecb10091a8e771",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6,  7,  8,  9, 10, 11, 12, 13])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 20
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-22T13:09:01.337021Z",
-     "start_time": "2025-10-22T13:09:01.331993Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "for _ in range(2):\n",
-    "    for t in s1:\n",
-    "        _,_,_,_,_,info = env.step(t)\n",
-    "print(info[\"time\"])\n",
-    "print(env.m)\n",
-    "for t in s2:\n",
-    "        _,_,_,_,_,info = env.step(t)\n",
-    "print(info[\"time\"])\n",
-    "print(env.m)\n"
+    "for i,t in enumerate(all):\n",
+    "    _,_,_,_,_,info = env.step(t)\n",
+    "    if i % 10 ==0:\n",
+    "        print(info['time'])\n"
    ],
    "id": "8671c8f8fbed4ab6",
    "outputs": [
@@ -116,62 +119,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7230\n",
-      "[ 1  0  0  0  0  0  2  0  0  0  0  0  0  0 10  0  1  1  1  2  2]\n",
-      "7254\n",
-      "[ 0  0  0  0  0  0  2  0  0  0  0  0  0  0 10  1  1  1  1  2  2]\n"
+      "2\n",
+      "77\n",
+      "142\n",
+      "2978\n",
+      "3137\n",
+      "3212\n",
+      "3371\n",
+      "3436\n",
+      "5985\n",
+      "6154\n",
+      "6219\n",
+      "6388\n",
+      "6547\n",
+      "9079\n",
+      "9144\n",
+      "9313\n",
+      "9576\n",
+      "12079\n"
      ]
     }
    ],
-   "execution_count": 50
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-22T13:09:10.794817Z",
-     "start_time": "2025-10-22T13:09:10.789622Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "for _ in range(2):\n",
-    "    for t in s3:\n",
-    "        _,_,_,_,_,info = env.step(t)\n",
-    "print(info[\"time\"])\n",
-    "print(env.m)\n",
-    "for t in s4:\n",
-    "        _,_,_,_,_,info = env.step(t)\n",
-    "print(info[\"time\"])\n",
-    "print(env.m)"
-   ],
-   "id": "2d558f179f4bfc89",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10283\n",
-      "[ 0  0  0  0  0  0  0  0  0  0  0  0  0  0 12  1  1  1  1  2  2]\n",
-      "10418\n",
-      "[ 0  0  0  0  0  0  0  0  0  0  0  0  0  0 13  0  1  1  1  2  2]\n"
-     ]
-    }
-   ],
-   "execution_count": 51
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "for _ in range(2):\n",
-    "    for t in s3:\n",
-    "        _,_,_,_,_,info = env.step(t)\n",
-    "print(info[\"time\"])\n",
-    "print(env.m)"
-   ],
-   "id": "8dadd190990f6d3b"
+   "execution_count": 71
   }
  ],
  "metadata": {
