docs: 添加释放时间约束优化新思路

--- a/docs/plan/试调度策略.md
+++ b/docs/plan/试调度策略.md
@@ -33,3 +33,38 @@
 1. **如何判断"最佳"开工时间？**
 2. **推迟开工是否会增加总 makespan？**
 3. **如何平衡缓冲区时间和整体效率？**
+
+---
+
+# 新思路：释放时间约束优化
+
+## 原话
+
+> 以前是在步进的过程中判定是否违反释放时间，这导致的一个问题是释放时间预估不准。我想到一个新的思路，在当前policy收集数据时，首先跑一遍基础，不考虑释放时间约束。跑完之后动作序列已知，则可以去追责犯错的动作。
+
+## 核心思路
+
+### 问题
+- 步进过程中判定释放时间 → 预估不准
+
+### 新方案
+
+#### 步骤 1：先跑一遍
+- 不考虑释放时间约束
+- 记录完整的动作序列
+
+#### 步骤 2：追责
+- 动作序列已知后
+- 反向分析哪些动作导致了释放时间违反
+- 针对犯错的动作进行优化
+
+### 优势
+- 释放时间预估更准确
+- 可以精确定位问题动作
+- 优化更有针对性
+
+## 思考
+
+1. **如何定义"犯错动作"？**
+2. **追责后如何调整policy？**
+3. **如何平衡效率与释放时间约束？**
